@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -43,7 +42,7 @@ public class CommentService {
         List<Comment> comments = commentRepository.findByDiary(diary);
         return comments.stream()
                 .map(CommentResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
